@@ -4,6 +4,7 @@ from zope.interface import implementer
 from eea.asyncmove.events import AsyncMoveEvent
 from eea.asyncmove.events.interfaces import IAsyncMoveFail
 from eea.asyncmove.events.interfaces import IAsyncMoveSuccess
+from eea.asyncmove.events.interfaces import IAsyncMoveSaveProgress
 
 
 @implementer(IAsyncMoveFail)
@@ -15,3 +16,13 @@ class AsyncMoveFail(AsyncMoveEvent):
 class AsyncMoveSuccess(AsyncMoveEvent):
     """ Event triggered when an async move job succeeded
     """
+
+@implementer(IAsyncMoveSaveProgress)
+class AsyncMoveSaveProgress(AsyncMoveEvent):
+    """ Event triggered when an async move job saved its progress
+    """
+
+    def __init__(self, context, **kwargs):
+        self.object = context
+        for key, value in kwargs.items():
+            setattr(self, key, value)
