@@ -1,8 +1,12 @@
 """ Subscribers
 """
+import transaction
 import os
 import logging
 from plone.app.async.subscribers import set_quota
+from zope.annotation import IAnnotations
+from Products.CMFCore.utils import getToolByName
+from ZODB.utils import u64
 logger = logging.getLogger('eea.asyncmove')
 
 
@@ -16,6 +20,7 @@ def getMaximumThreads(queue):
         for _agent in da.values():
             size += 3
     return size or 1
+
 
 def configureQueue(event):
     """ Configure zc.async queue for MOVE jobs
@@ -33,3 +38,30 @@ def configureQueue(event):
     logger.info(
         "quota 'asyncmove' with size %r configured in queue %r.",
         size, queue.name)
+
+
+def saveJobProgress(event):
+    """ Save job progress
+    """
+    portal = getToolByName(event.object, 'portal_url').getPortalObject()
+    portal_anno = IAnnotations(portal)
+    annotation = portal_anno.get('async_move_job')
+    annotation_job = annotation[event.job_id]
+
+    if event.operation == 'initialize':
+        annotation_job['sub_progress'] =  {}
+        annotation_job['title'] = "Move below objects to %s" % (
+            event.object.absolute_url()
+        )
+
+        for oid, title in event.oblist_id:
+            annotation_job['sub_progress'][oid] = {}
+            annotation_job['sub_progress'][oid]['progress'] = 0
+            annotation_job['sub_progress'][oid]['title'] = title
+
+    if  event.operation == 'sub_progress':
+        obj_id = event.obj_id
+        annotation_job['sub_progress'][obj_id]['progress'] = event.progress
+
+    if event.operation == 'progress':
+        annotation_job['progress'] = event.progress
