@@ -1,0 +1,8 @@
+""" Content rules handlers
+"""
+from plone.app.contentrules.handlers import execute
+
+def execute_event(event):
+    """ Execute custom rules
+    """
+    execute(event.object, event)
